# DojoTemplate

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  ReadinessList.txt  docker-compose.yml
src/: sampleTests.cpp  testZero.cpp
workspace/: CMakeLists.txt
workspace/src/: testZero.cpp
